Adiciona makefile na raiz do projeto.

--- a/latex/Makefile
+++ b/latex/Makefile
@@ -46,12 +46,15 @@ $(TARGET): $(MAIN_FILE) $(SOURCES) bibliografia.bib
 	$(PS2PDF) $(PS_FILE)
 	@cp $(PDF_FILE) $(TARGET)
 
-clean:
+clean-soft:
 	rm -f *~ *.dvi *.ps *.backup *.aux *.log
 	rm -f *.lof *.lot *.bbl *.blg *.brf *.toc *.idx
+	rm -f tcc.pdf
+
+clean: clean-soft
 	rm -f *.pdf
 	
-dist: clean
+dist: clean-soft
 	tar vczf tcc-fga-latex-$(VERSION).tar.gz *
 
 dist-clean: clean
